try fix scrollbar issue

--- a/src/iRLeagueManager.Web/wwwroot/css/site.css
+++ b/src/iRLeagueManager.Web/wwwroot/css/site.css
@@ -2,9 +2,9 @@
 @import url(toggle.css);
 
 @media (min-width: 840.98px) {
-    html {
-        overflow-x: hidden;
+    body {
         margin-right: calc(-1 * (100vw - 100%));
+        max-width: 100%
     }
 }
 
